--- a/backend/infsys/pom.xml
+++ b/backend/infsys/pom.xml
@@ -46,6 +46,11 @@
             <artifactId>lombok</artifactId>
             <version>1.18.38</version>
         </dependency>  
+        <dependency>
+            <groupId>jakarta.validation</groupId>
+            <artifactId>jakarta.validation-api</artifactId>
+            <version>3.1.1</version>
+        </dependency>
     </dependencies>
     <build>
         <finalName>${artifactId}</finalName>
