--- a/backend/infsys/pom.xml
+++ b/backend/infsys/pom.xml
@@ -54,6 +54,11 @@
             <version>3.1.1</version>
             <scope>provided</scope>
         </dependency>
+        <dependency>
+            <groupId>io.jsonwebtoken</groupId>
+            <artifactId>jjwt-api</artifactId>
+            <version>0.13.0</version>
+        </dependency>
     </dependencies>
     <build>
         <finalName>${artifactId}</finalName>
