add connection pool(hikaricp)&update repository structure

--- a/backend/infsys/pom.xml
+++ b/backend/infsys/pom.xml
@@ -30,7 +30,7 @@
             <groupId>org.postgresql</groupId>
             <artifactId>postgresql</artifactId>
             <version>42.7.2</version>
-            <scope>provided</scope>
+            <scope>compile</scope>
         </dependency>
         <dependency>
             <groupId>com.google.code.gson</groupId>
@@ -100,6 +100,11 @@
             <artifactId>resteasy-multipart-provider</artifactId>
             <version>6.2.14.Final</version>
             <scope>provided</scope>
+        </dependency>
+        <dependency>
+            <groupId>com.zaxxer</groupId>
+            <artifactId>HikariCP</artifactId>
+            <version>7.0.2</version>
         </dependency>
     </dependencies>
     <build>
