--- a/backend/infsys/pom.xml
+++ b/backend/infsys/pom.xml
@@ -128,6 +128,21 @@
             <version>15.2.6.Final</version>
             <scope>provided</scope>
         </dependency>
+        <dependency>
+            <groupId>io.minio</groupId>
+            <artifactId>minio</artifactId>
+            <version>8.6.0</version>
+        </dependency>
+        <dependency>
+            <groupId>com.squareup.okhttp3</groupId>
+            <artifactId>okhttp</artifactId>
+            <version>4.12.0</version>
+        </dependency>
+        <dependency>
+            <groupId>com.fasterxml.jackson.datatype</groupId>
+            <artifactId>jackson-datatype-jsr310</artifactId>
+            <version>2.15.4</version> 
+        </dependency>
     </dependencies>
     <build>
         <finalName>${artifactId}</finalName>
